# PokeScouter

./: .firebaserc  .gitignore  pubspec.yaml
.fvm/: flutter_sdk
functions/: .eslintrc.js  .gitignore  package-lock.json  package.json
functions/src/: index.ts
functions/src/controller/: battle.ts
ios/Flutter/: dev.xcconfig  emulator.xcconfig  prod.xcconfig
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/ci_scripts/: ci_post_clone.sh
ios/firebase/dev/: GoogleService-Info.plist
ios/scripts/: retrieve_dart_defines.sh
lib/: environment_config.dart  main.dart  router.dart  theme.dart
lib/constants/: route_path.dart
lib/domain/: pokemon.freezed.dart  pokemon.g.dart  predicted_pokemon.dart  predicted_pokemon.freezed.dart  predicted_pokemon.g.dart  predicted_response.dart  predicted_response.freezed.dart  predicted_response.g.dart
lib/domain/firebase/: battle.dart  battle.freezed.dart  battle.g.dart
lib/feature/: battle.dart
lib/presentation/Widget/: battle_widget.dart  modal_bottom_sheet.dart  party_widget.dart  pokemon_textfield.dart  show_dialog.dart
lib/presentation/battle_memo/: battle_memo_page.dart
lib/presentation/battle_start/: battle_start_page.dart
lib/presentation/scouter/: scouter_controller.dart  (+3 more)
lib/providers/: camera_provider.dart  scouter_controller_provider.dart
lib/repository/: predict_repository.dart
lib/util/: union_timestamp.dart
python/image/: .gitignore  main.py
server/: Dockerfile  pyproject.toml
server/api/: main.py
server/model/: label-top150.csv
test/repository/: firebase_mock.dart
(+26 files in other folders)
